create seperate route for mobile app registration pay 999 rs
